syntax = "proto3";
package tracing;

message Property {
    uint64 id = 1;
    string key = 2;
    string value = 3;
}

message Span1 {
    uint64 start_time_ns = 1;
    uint64 duration_ns = 2;
    uint64 id = 3;
    uint64 parent_id = 4;
    string event = 5;
}

message Spans1 {
    repeated Span1 spans = 1;
    repeated Property properties = 3;
}

message Span2 {
    uint64 start_time_ns = 1;
    uint64 duration_ns = 2;
    uint64 id = 3;
    uint64 parent_id = 4;
    uint64 event = 5;
}

message Spans2 {
    repeated Span2 spans = 1;
    repeated Property properties = 2;
}